Fixed issues with other scrollbars

--- a/Moonlight/wwwroot/assets/css/blazor.css
+++ b/Moonlight/wwwroot/assets/css/blazor.css
@@ -69,5 +69,9 @@
 
 
 .single-color-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #6964E4;
+    background: #6964E4;
+}
+
+.single-color-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #6964E4;
 }
